<resources>
    <!-- Valori comuni -->
    <string name="app_name">Mapper</string>
    <string name="app_motto">Photos from everywhere!</string>
    <string name="title_tab_dettagli">Dettagli</string>
    <string name="title_tab_foto">Foto</string>
    <string name="title_tab_mappa">Mappa</string>
    <string name="latitudine">Latitudine</string>
    <string name="longitudine">Longitudine</string>
    <string name="checked">Checked</string>

    <!-- Azioni -->
    <string name="delete">Elimina</string>
    <string name="ok">OK</string>
    <string name="save">Salva</string>
    <string name="cancel">Cancella</string>
    <string name="annulla">Annulla</string>
    <string name="edit">Modifica</string>
    <string name="remove">Rimuovi</string>
    <string name="rename">Rinomina</string>
    <string name="geolocalizza">Geolocalizza</string>
    <string name="completa_azione">Completa azione usando</string>
    <string name="action_settings">Impostazioni</string>
    <string name="info">Informazioni</string>
    <string name="condividi">Condividi</string>
    <string name="aggiungi_foto">Aggiungi foto</string>
    <string name="condividi_foto">Condividi foto</string>
    <string name="go_to_dettagli">Dettagli ></string>
    <string name="send_log_file">Invia log</string>

    <!-- dialogs -->
    <string name="aggiungi_viaggio">Nome del viaggio</string>
    <string name="aggiungi_citta">Nome della città</string>
    <string name="aggiungi_posto">Nome del posto</string>

    <!-- Insert foto -->
    <string name="camera">Fotocamera</string>
    <string name="gallery">Galleria</string>
    <string name="image">Immagine</string>

    <!-- MainActivity -->
    <string name="suggerimento_crea_viaggio">Crea un nuovo viaggio</string>
    <string name="add_viaggio">Nome del viaggio</string>
    <string name="add_citta">Nome della città</string>
    <plurals name="statistiche_viaggio">
        <item quantity="one">%1$d città, %2$d posto, %3$d foto</item>
        <item quantity="other">%1$d città, %2$d posti, %3$d foto</item>
    </plurals>
    <string name="conferma_cancellazione_viaggi">Vuoi cancellare i viaggi?</string>
    <string name="conferma_cancellazione_viaggio">Vuoi cancellare il viaggio?</string>
    <string name="nessun_viaggio">Nessun viaggio</string>
    <string name="log_reader_menu">Show Log</string>

    <!-- DettagliViaggioActivity -->
    <string name="title_activity_dettagli_viaggio">ActivityDettagliViaggio</string>
    <string name="conferma_cancellazione_piu_citta">Vuoi cancellare le città?</string>
    <string name="conferma_cancellazione_citta">Vuoi cancellare la città?</string>

    <!-- DettagliViaggioFragment -->
    <string name="suggerimento_crea_citta">Aggiungi tutte le città che vuoi visitare</string>
    <string name="nuova_citta_loading_dialog">Recupero informazioni &#8230;</string>
    <plurals name="statistiche_citta">
        <item quantity="one">%1$d posto, %2$d foto</item>
        <item quantity="other">%1$d posti, %2$d foto</item>
    </plurals>
    <string name="nessuna_citta">Non hai ancora aggiunto città</string>

    <!-- DettagliCittaFragment -->
    <string name="suggerimento_crea_posto">Aggiungi tutti i posti che vuoi visitare in questa città</string>
    <string name="add_posto">Nome del posto</string>
    <string name="conferma_cancellazione_posti">Vuoi cancellare i posti?</string>
    <string name="conferma_cancellazione_posto">Vuoi cancellare il posto?</string>
    <string name="noPosti">Non hai ancora aggiunto nessun posto</string>

    <!-- DettagliPostoActivity -->
    <string name="suggerimento_crea_foto">Aggiungi le fotografie</string>
    <string name="subTitleDettagliPostoActivity">Foto scattate</string>
    <string name="nessuna_foto">Nessuna foto</string>

    <!-- Info fotografie -->
    <string name="scattata_presso">Presso:</string>
    <string name="durante_il_viaggio">Scattata durante il viaggio:</string>
    <string name="viaggio">Viaggio</string>
    <string name="seleziona_viaggio">Seleziona un viaggio</string>
    <string name="citta">Città</string>
    <string name="seleziona_citta">Seleziona una città</string>
    <string name="posto">Posto</string>
    <string name="seleziona_posto">Seleziona un posto</string>
    <string name="viaggio_non_selezionato">Selezionare un viaggio</string>
    <string name="citta_non_selezionata">Selezionare una città</string>
    <string name="spinner_voce_crea_viaggio">Crea nuovo</string>
    <string name="spinner_elenco_viaggio_titolo">Seleziona un viaggio</string>
    <string name="new_viaggio">Nuovo viaggio</string>
    <string name="new_citta">Nuova città</string>
    <string name="new_posto">Nuovo posto</string>
    <string name="dettagli">Dettagli</string>

    <!-- Dialog dettagli foto -->
    <string name="percorso">Percorso</string>
    <string name="formato">Formato</string>
    <string name="dimensione">Dimensione</string>
    <string name="risoluzione">Risoluzione</string>
    <string name="fotocamera">Fotocamera</string>
    <string name="exif">EXIF</string>
    <string name="data">Data</string>
    <string name="indirizzo">Indirizzo</string>

    <!-- Dialoghi autocomplete -->
    <string name="nessun_risultato">Nessun risultato trovato</string>
    <string name="error_connection_google_api">Impossibile connettersi a Google. Errore: %d</string>

    <!-- Dialog mancanza connesione internet -->
    <string name="no_internet_title_dialog">Errore</string>
    <string name="no_internet_message_dialog">Impossibile creare la città.\nNessuna connessione a Internet</string>

    <!-- Dialog errore creazione citta -->
    <string name="errore_nuova_citta_title_dialog">Errore</string>
    <string name="errore_nuova_citta_message_dialog">Errore durante la creazione della città</string>

    <!-- ElencoFotoFragment -->
    <string name="conferma_cancellazione_foto">Vuoi cancellare le foto?</string>

    <!-- FullFotoFragment -->
    <string name="full_foto_fragment_title">Foto</string>
    <string name="mostra_su_mappa">Mostra su mappa</string>

    <!-- MappaFragment -->
    <string name="map_count_foto">%d foto</string>

    <!-- Action Mode stringhe selezione -->
    <plurals name="action_mode_count_selected">
        <item quantity="one">%d elemento selezionato</item>
        <item quantity="other">%d elementi selezionati</item>
    </plurals>

    <!-- Task inserimento item -->
    <string name="inserimento_nuovo_elemento_dialog">Inserimento nuovo elemento</string>
    <string name="errore_inserimento_titolo_dialog">Errore</string>
    <string name="errore_inserimento_messaggio_dialog">Errore durante l\'inserimento</string>

    <!-- Task cancellazione items -->
    <plurals name="cancellazione_elemento_dialog">
        <item quantity="one">Cancellazione elemento</item>
        <item quantity="other">Cancellazione elementi</item>
    </plurals>
    <string name="errore_eliminazione_titolo_dialog">Errore</string>
    <string name="errore_eliminazione_messaggio_dialog">Errore durante l\'eliminazione</string>

    <!-- Messaggi di errore -->
    <string name="unsupported_uri_error">URI non supportata</string>
    <string name="foto_not_allowed">Impossibile scattare una foto</string>

    <!-- About -->
    <string name="title_activity_about">About</string>
    <string name="all_right_reserved">All rights reserved.</string>
    <string name="about">About</string>

    <!-- FetchAddressIntentService -->
    <string name="no_address_found">Nessun indirizzo trovato</string>
    <string name="no_location_data_provided">Provider non disponibile</string>
    <string name="service_not_available">Servizio non disponibile</string>
    <string name="invalid_lat_long_used">Coordinate non valide</string>
    <string name="no_geocoder_available">Geocoder non disponibile</string>
    <string name="location_search_in_progress">Ricerca della posizione …</string>

    <!-- ModInfoFoto -->
    <string name="recupero_info">Recupero informazioni sulla località</string>
    <string name="recupero_info_foto">Recupero informazioni foto</string>
    <string name="no_foto_coordinate_available">Nessuna informazione disponibile</string>
    <string name="photo_information_found">Crediamo che la foto sia stata scattata a %s</string>
    <string name="connection_error">Errore di connessione</string>

    <!-- InsertTask -->
    <string name="inserito_nuovo_viaggio">Nuovo viaggio creato</string>
    <string name="inserita_nuova_citta">Nuova città creata</string>
    <string name="inserito_nuovo_posto">Nuovo posto creato</string>
    <string name="elemento_presente">Elemento già inserito!</string>

    <!-- UpdateTask -->
    <string name="modificato_viaggio">Modificato il viaggio %s</string>

    <!-- DeleteTask -->
    <plurals name="cancellazione_viaggio">
        <item quantity="one">Cancellato %d viaggio</item>
        <item quantity="other">Cancellati %d viaggi</item>
    </plurals>
    <plurals name="cancellazione_citta">
        <item quantity="one">Cancellata %d città</item>
        <item quantity="other">Cancellate %d città</item>
    </plurals>
    <plurals name="cancellazione_posto">
        <item quantity="one">Cancellato %d posto</item>
        <item quantity="other">Cancellati %d posti</item>
    </plurals>

    <!-- AddCittaDialog -->
    <string name="add_citta_dialog_message">Aggiunta città</string>

    <!-- AddPostoDialog -->
    <string name="add_posto_dialog_message">Aggiunta posto</string>

    <!-- LocationManagerCheck -->
    <string name="no_localizzazione_titolo">Usare la posizione?</string>
    <string name="no_localizzazione_messaggio">Devi abilitare la localizzazione per usare questa funzione. Attivala dalle impostazioni.</string>

    <!-- AutoUpdate -->
    <string name="autoupdate_update_tips">Nuova versione</string>
    <string name="autoupdate_confirm">Conferma</string>
    <string name="autoupdate_cancel">Cancella</string>
    <string name="autoupdate_no_update">App aggiornata</string>

    <!-- ConsistencyService -->
    <plurals name="rimosse_foto_db">
        <item quantity="one">Rimossa %d foto cancellata dal dispositivo</item>
        <item quantity="other">Rimosse %d foto cancellate dal dispositivo</item>
    </plurals>
    <plurals name="rimosse_foto_folder">
        <item quantity="one">Rimossa %d foto non più utilizzata</item>
        <item quantity="other">Rimosse %d foto non più utilizzate</item>
    </plurals>

    <!-- Titoli -->
    <string name="title_activity_dettagli_citta">DettagliCittaActivity</string>
    <string name="title_activity_dettagli_posto">DettagliPostoActivity</string>
    <string name="title_activity_log">Log</string>

</resources>
