<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/verydark_grey" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/dettagli"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/dialog_header_padding_left"
            android:paddingRight="@dimen/dialog_header_padding_right"
            android:paddingEnd="@dimen/dialog_header_padding_right"
            android:paddingTop="@dimen/dialog_header_padding_left"
            android:paddingBottom="@dimen/dialog_header_padding_left"/>

        <LinearLayout
            android:id="@+id/df_container_percorso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2sp">
            <TextView style="?android:subtitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/light_grey"
                android:text="@string/percorso"
                android:gravity="end"
                android:layout_marginRight="@dimen/df_margin_h"/>
            <TextView style="?android:titleTextStyle"
                android:id="@+id/df_testo_percorso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:layout_gravity="fill" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/df_container_formato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2sp">
            <TextView style="?android:subtitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/light_grey"
                android:text="@string/formato"
                android:gravity="end"
                android:layout_marginRight="@dimen/df_margin_h" />
            <TextView style="?android:titleTextStyle"
                android:id="@+id/df_testo_formato"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:layout_gravity="fill" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/df_container_dimensione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2sp">
            <TextView style="?android:subtitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/light_grey"
                android:text="@string/dimensione"
                android:gravity="end"
                android:layout_marginRight="@dimen/df_margin_h" />
            <TextView style="?android:titleTextStyle"
                android:id="@+id/df_testo_dimensione"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:layout_gravity="fill" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/df_container_risoluzione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2sp">
            <TextView style="?android:subtitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/light_grey"
                android:text="@string/risoluzione"
                android:gravity="end"
                android:layout_marginRight="@dimen/df_margin_h" />
            <TextView style="?android:titleTextStyle"
                android:id="@+id/df_testo_risoluzione"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:layout_gravity="fill" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/df_container_fotocamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2sp">
            <TextView style="?android:subtitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/light_grey"
                android:text="@string/fotocamera"
                android:gravity="end"
                android:layout_marginRight="@dimen/df_margin_h" />
            <TextView style="?android:titleTextStyle"
                android:id="@+id/df_testo_fotocamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:layout_gravity="fill" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/df_container_exif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2sp">
            <TextView style="?android:subtitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/light_grey"
                android:text="@string/exif"
                android:gravity="end"
                android:layout_marginRight="@dimen/df_margin_h" />
            <TextView style="?android:titleTextStyle"
                android:id="@+id/df_testo_exif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:layout_gravity="fill" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/df_container_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2sp">
            <TextView style="?android:subtitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/light_grey"
                android:text="@string/data"
                android:gravity="end"
                android:layout_marginRight="@dimen/df_margin_h" />
            <TextView style="?android:titleTextStyle"
                android:id="@+id/df_testo_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:layout_gravity="fill" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/df_container_indirizzo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2sp">
            <TextView style="?android:subtitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/light_grey"
                android:text="@string/indirizzo"
                android:gravity="end"
                android:layout_marginRight="@dimen/df_margin_h" />
            <TextView style="?android:titleTextStyle"
                android:id="@+id/df_testo_indirizzo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:layout_gravity="fill"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="right|end">
        <TextView
            android:id="@+id/btn_closeDettagliFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/df_btn_margin_h"
            android:paddingRight="@dimen/df_btn_margin_h"
            android:paddingTop="@dimen/df_btn_margin_v"
            android:paddingBottom="@dimen/df_btn_margin_v"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>