<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView  style="?android:textAppearanceLargeInverse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_header_height"
        android:gravity="center_vertical"
        android:background="@color/dialog_header_bckg"
        android:text="@string/completa_azione"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/dialog_header_padding_left"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Da Camera -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_icon_margin"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_photo_camera_black_36dp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:layout_gravity="center_horizontal" />
         </LinearLayout>
        <!-- Da Gallery -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_icon_margin"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_collections_black_36dp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>