<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="200dp" >

        <ImageView
            android:id="@+id/thumb_mod_info_foto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:src="@drawable/prova02"/>

        <TextView
            android:id="@+id/numero_immagini"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="@dimen/num_foto_padding_top"
            android:paddingBottom="@dimen/num_foto_padding_bottom"
            android:paddingLeft="@dimen/num_foto_padding_h"
            android:paddingRight="@dimen/num_foto_padding_h"
            android:background="@color/info_background"
            android:textColor="#ffffff"
            android:visibility="gone"/>

    </RelativeLayout>




    <!-- Edit viaggio -->
    <TextView style="?android:textAppearanceSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/durante_il_viaggio"
        android:layout_marginTop="@dimen/info_margin_big"
        android:textColor="#ff898989"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/mod_background"
        android:layout_marginTop="@dimen/info_margin">

        <!--    Edit viaggio -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:minHeight="?android:listPreferredItemHeight"
            android:layout_height="@dimen/standard_horizontal_tab_height"   >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="?android:listPreferredItemPaddingLeft"
                android:paddingEnd="?android:listPreferredItemPaddingRight"
                android:gravity="center_vertical">
                <TextView style="?android:textAppearanceListItemSmall"
                    android:layout_weight="1"
                    android:layout_width="@dimen/width_horizz_tab_title_container"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mod_subtitle"
                    android:text="@string/viaggio"/>
                <TextView    style="?android:textAppearanceSearchResultSubtitle"
                    android:id="@+id/txt_edit_viaggio_foto"
                    android:layout_weight="10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mod_subtitle"
                    android:layout_gravity="center"
                    android:text="@string/seleziona_viaggio" />
            </LinearLayout>
            <ImageButton android:id="@+id/mod_foto_add_viaggio"
                style="?android:borderlessButtonStyle"
                android:src="@drawable/ic_add_grey600_24dp"
                android:layout_height="@dimen/standard_touch_icon_size_min"
                android:layout_width="@dimen/standard_touch_icon_size_min"
                android:background="?android:selectableItemBackground"
                android:layout_marginTop="@dimen/standard_touch_icon_margin_min"
                android:layout_marginBottom="@dimen/standard_touch_icon_margin_min"
                android:layout_marginEnd="@dimen/standard_touch_icon_margin_min"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/add_viaggio" />
        </LinearLayout>
    </LinearLayout>





    <!-- Edit luoghi -->
    <TextView style="?android:textAppearanceSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scattata_presso"
        android:layout_marginTop="@dimen/info_margin_big"
        android:textColor="#ff898989"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/mod_background"
        android:layout_marginTop="@dimen/info_margin">

        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="1dp"
            android:background="@color/horizontal_sep_color"/>

    <!--    Edit città -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:minHeight="?android:listPreferredItemHeight"
        android:layout_height="@dimen/standard_horizontal_tab_height"   >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="?android:listPreferredItemPaddingLeft"
            android:paddingEnd="?android:listPreferredItemPaddingRight"
            android:gravity="center_vertical">
            <TextView style="?android:textAppearanceListItemSmall"
                android:layout_weight="1"
                android:layout_width="@dimen/width_horizz_tab_title_container"
                android:layout_height="wrap_content"
                android:textColor="@color/mod_subtitle"
                android:text="@string/citta"/>
            <TextView style="?android:textAppearanceSearchResultSubtitle"
                android:id="@+id/txt_edit_citta_foto"
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mod_subtitle"
                android:text="@string/seleziona_citta"/>
        </LinearLayout>
        <ImageButton android:id="@+id/mod_foto_add_citta"
            style="?android:borderlessButtonStyle"
            android:src="@drawable/ic_add_grey600_24dp"
            android:layout_height="@dimen/standard_touch_icon_size_min"
            android:layout_width="@dimen/standard_touch_icon_size_min"
            android:background="?android:selectableItemBackground"
            android:layout_marginTop="@dimen/standard_touch_icon_margin_min"
            android:layout_marginBottom="@dimen/standard_touch_icon_margin_min"
            android:layout_marginEnd="@dimen/standard_touch_icon_margin_min"
            android:focusable="true"
            android:contentDescription="@string/edit" />
    </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="1dp"
            android:background="@color/horizontal_sep_color"/>

    <!--    Edit posto -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:minHeight="?android:listPreferredItemHeight"
        android:layout_height="@dimen/standard_horizontal_tab_height"   >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="?android:listPreferredItemPaddingLeft"
            android:paddingEnd="?android:listPreferredItemPaddingRight"
            android:gravity="center_vertical">
            <TextView style="?android:textAppearanceListItemSmall"
                android:layout_weight="1"
                android:layout_width="@dimen/width_horizz_tab_title_container"
                android:layout_height="wrap_content"
                android:textColor="@color/mod_subtitle"
                android:text="@string/posto"/>
            <TextView style="?android:textAppearanceSearchResultSubtitle"
                android:id="@+id/txt_edit_posto_foto"
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mod_subtitle"
                android:text="@string/seleziona_posto"/>
        </LinearLayout>
        <ImageButton android:id="@+id/mod_foto_add_posto"
            style="?android:borderlessButtonStyle"
            android:src="@drawable/ic_add_grey600_24dp"
            android:layout_height="@dimen/standard_touch_icon_size_min"
            android:layout_width="@dimen/standard_touch_icon_size_min"
            android:background="?android:selectableItemBackground"
            android:layout_marginTop="@dimen/standard_touch_icon_margin_min"
            android:layout_marginBottom="@dimen/standard_touch_icon_margin_min"
            android:layout_marginEnd="@dimen/standard_touch_icon_margin_min"
            android:focusable="true"
            android:contentDescription="@string/edit" />
    </LinearLayout>

    </LinearLayout>




</LinearLayout>
</ScrollView>